k3s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: raftam
  labels:
    app: raftam
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app:  raftam
